--- a/w3_band/assets/css/style.css
+++ b/w3_band/assets/css/style.css
@@ -9,6 +9,8 @@ html {
     font-family: Helvetica, Arial, sans-serif;
 }
 
+
+
 /* 
 1. Vi tri
 2. kich thuov
@@ -17,6 +19,10 @@ html {
 
 
 */
+
+.text-white {
+    color: #fff;
+}
 
 #main {
 
@@ -198,6 +204,48 @@ html {
     margin-top: 15px;
     border-radius: 4px;
 } 
+/* Tour section */
+.tour-section {
+    background-color: #000;
+
+}
+
+.ticket-list {
+    background-color: #fff;
+    margin-top: 40px;
+    list-style-type: none;
+
+
+}
+
+.ticket-list li {
+    color: #757575;
+    font-size: 15px;
+    padding: 12px 16px;
+    border-bottom: 1px solid #ddd;
+}
+
+.ticket-list .sold-out {
+    background-color: #f44336;
+    color: #fff;
+    padding: 3px 4px;
+    margin-left: 16px;
+
+}
+
+
+.ticket-list .quantily {
+    float: right;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    line-height: 24px;
+
+}
+
 #footer {
 
 }
