--- a/w3_band/assets/css/style.css
+++ b/w3_band/assets/css/style.css
@@ -246,6 +246,52 @@ html {
 
 }
 
+
+
+/* Footer */
+.place-list {
+    margin-top: 32px;
+
+
+}
+
+.place-item {
+    float: left;
+    width: 33.33%;
+    padding: 0 8px;
+
+}
+
+.place-img {
+    width: 100%;
+
+}
+
+.place-body {
+
+}
+
+.place-heading {
+
+}
+
+.place-time {
+
+}
+
+.place-decs {
+
+}
+
+.place-buy-btn {
+
+}
+
+
+
+
+
+
 #footer {
 
 }
