--- a/w3_band/assets/css/style.css
+++ b/w3_band/assets/css/style.css
@@ -24,6 +24,43 @@ html {
     color: #fff;
 }
 
+.row {
+    margin-left: -8px;
+    margin-right: -8px;
+    margin-top: 8px;
+}
+
+.raw:after {
+    content : "";
+    display: block;
+    clear: both;
+}
+
+.col {
+    float: left;
+    padding-right: 8px;
+}
+.col-full {
+    width: 100%;
+
+}
+.col-half {
+    width: 50%;
+
+}
+
+.col-third {
+    width: 33.33%;
+}
+
+.mt-8 {
+    margin-top: 8px;
+}
+
+.mt-16 {
+    margin-top: 16px;
+}
+
 #main {
 
 }
@@ -157,6 +194,7 @@ html {
 
 #content .content-section{
     width: 800px;
+    height: 100%;
     padding: 64px 0;
     margin-left: auto;
     margin-right: auto;
@@ -313,12 +351,75 @@ html {
 
 }
 
+.contact-content {
+    margin-top: 48px;
+}
 
+.contact-info {
+    font-size: 18px;
+    line-height: 1.5;
+}
 
+.contact-info i[class*="ti-"] {
+    width: 32px;
+    display: inline-block;
+}
 
+.contact-form {
+    font-size: 15px;
+}
+
+.contact-form .form-control {
+    padding:10px;
+    border: 1px solid #ccc;
+    width: 100%;
+    margin-top: 8px;
+}
+
+.contact-form .form-submit {
+    background-color: #000;
+    color : #fff;
+    border : 1px solid #000;
+    padding: 10px 16px;
+    float: right;
+    margin-bottom: 8px;
+
+}
+
+.map-section img {
+    width: 100%;
+
+}
 
 #footer {
+    padding: 64px 16px;
+    text-align: center;
 
+}
+
+#footer .socials-list {
+    font-size: 24px;
+}
+
+
+#footer .socials-list a {
+    color: rgba(0,0,0,0.6); 
+    text-decoration: none;
+
+}
+
+#footer .socials-list a:hover {
+    color: rgba(0,0,0,0.4); 
+
+}
+
+#footer .copyright {
+    margin-top: 16px;
+    color: rgba(0,0,0,0.6); 
+
+}
+#footer .copyright a {
+    color: rgba(0,0,0,0.6); 
 }
 
 .clear {
