--- a/w3_band/assets/css/style.css
+++ b/w3_band/assets/css/style.css
@@ -7,6 +7,7 @@
 
 html {
     font-family: Helvetica, Arial, sans-serif;
+    scroll-behavior: smooth;
 }
 
 
@@ -73,6 +74,7 @@ html {
     left: 0;
     right: 0;
     z-index: 1;
+   
 }
 #nav {
     display: inline-block;
@@ -138,6 +140,16 @@ html {
     font-size: 14px;
 }
 
+#header .mobile-menu-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: none;
+
+    
+}
+
+#header .mobile-menu-btn,
 #header .search-btn {
     float: right;
     padding: 0 21px;
@@ -150,6 +162,12 @@ html {
 
 }
 
+#header .mobile-menu-btn:hover .menu-icon {
+    color: #000;
+
+}
+
+#header .menu-icon,
 #header .search-icon {
     color: #fff;
     font-size: 20px;
@@ -194,10 +212,13 @@ html {
 
 #content .content-section{
     width: 800px;
+    max-width: 100%;
     height: 100%;
     padding: 64px 0;
     margin-left: auto;
     margin-right: auto;
+    padding-left: 16px;
+    padding-right: 16px;
 
 }
 
